Some changes made...Chrome issue handled.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<title>Chitrank Mishra</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0 shrink-to-fit=no"
+		/>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
 		<meta content="utf-8" http-equiv="encoding" />
 		<link rel="shortcut icon" href="images/avatar.png" type="image/x-icon" />
@@ -27,7 +30,7 @@
 		<!-- Personalized Includes -->
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
-		<link class="theme" rel="stylesheet" type="text/css" href="css/light.css" />
+		<link class="theme" rel="stylesheet" type="text/css" href="css/dark.css" />
 		<!-- Javascript -->
 		<script type="text/javascript" src="js/template.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
@@ -139,7 +142,7 @@
 				<div class="row back1" onmouseover="toggleTrayActive('profile')">
 					<div class="col-sm-12 main-col">
 						<div class="row section" id="profile-section">
-							<div class="col-sm-6 center" id="profile-picture-div">
+							<div class="col col-sm-4 center" id="profile-picture-div">
 								<div class="profile-picture-sub-div">
 									<img
 										class="rounded-circle mx-auto picture"
@@ -148,7 +151,7 @@
 									/>
 								</div>
 							</div>
-							<div class="col-sm-6" id="introduction-div">
+							<div class="col col-sm-8" id="introduction-div">
 								<div class="introduction-sub-div">
 									<span class="Montserrat font3 brand-name">
 										Chitrank Mishra
@@ -266,7 +269,7 @@
 								<a href="" target="_blank">
 									<img class="mx-auto platform-logo" src="images/blogger.png" />
 								</a>
-							</div>
+							</div> -->
 							<div class="center platform-logo-div">
 								<a href="https://www.t.me/chitrank_0614" target="_blank">
 									<img
@@ -274,7 +277,7 @@
 										src="images/telegram.png"
 									/>
 								</a>
-							</div> -->
+							</div>
 						</div>
 					</div>
 				</div>
@@ -314,7 +317,7 @@
 										<div class="row company-profile-description font3">
 											<div class="col-sm-12">
 												<i class="fas fa-angle-right"></i> &nbsp&nbsp&nbsp Wrote
-												Published 20+ articles on the platform during the
+												Published 25+ articles on the platform during the
 												internship period.
 												<br />
 												<i class="fas fa-angle-right"></i> &nbsp&nbsp&nbsp
@@ -901,13 +904,13 @@
 								<div class="tech-div">
 									<div class="row highlight2 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
-											<img class="mx-auto tech-logo" src="images/c.webp" />
+											<img class="mx-auto tech-logo" src="images/c.png" />
 										</div>
 										<div class="col-sm-6 Varela bold language-name">
 											C
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -942,7 +945,7 @@
 											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
-											<i class="fas fa-star-half-alt"></i>
+											<i class="far fa-star"></i>
 										</div>
 									</div>
 
@@ -954,7 +957,7 @@
 											Python
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -980,7 +983,7 @@
 											Javascript
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1003,7 +1006,7 @@
 											HTML
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1026,7 +1029,7 @@
 											CSS
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1052,7 +1055,7 @@
 											Bootstrap 4
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1075,7 +1078,30 @@
 											MySQL
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
+										</div>
+										<div class="col">
+											<i class="fas fa-star"></i>
+										</div>
+										<div class="col">
+											<i class="fas fa-star"></i>
+										</div>
+										<div class="col">
+											<i class="fas fa-star-half-alt"></i>
+										</div>
+										<div class="col">
+											<i class="far fa-star"></i>
+										</div>
+									</div>
+									<div class="row highlight2 center tech-sub-div">
+										<div class="center col-sm-1 tech-logo-div">
+											<img class="mx-auto tech-logo" src="images/php.svg" />
+										</div>
+										<div class="col-sm-6 Varela bold language-name">
+											PHP
+										</div>
+										<div class="col">
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1098,7 +1124,7 @@
 											MongoDB
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1121,7 +1147,7 @@
 											Heroku
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1136,7 +1162,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<!-- <div class="row highlight2 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/git.png" />
 										</div>
@@ -1144,7 +1170,7 @@
 											Git
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
@@ -1158,7 +1184,7 @@
 										<div class="col">
 											<i class="far fa-star"></i>
 										</div>
-									</div>
+									</div> -->
 									<div class="row highlight2 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/arduino.png" />
@@ -1167,7 +1193,7 @@
 											Arduino
 										</div>
 										<div class="col">
-											<i class="fas fa-star icon"></i>
+											<i class="fas fa-star"></i>
 										</div>
 										<div class="col">
 											<i class="fas fa-star"></i>
