--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 										&nbsp&nbsp NOIDA, INDIA
 									</span>
 									<br />
-									<a href="documents/resume.pdf" target="_blank">
+									<a href="documents/Chitrank's Resume.pdf" target="_blank">
 										<span class="Varela highlight2 sub-brand">
 											<i class="fas fa-file-download"></i>
 											&nbsp&nbsp Resume
@@ -220,7 +220,7 @@
 								</a>
 							</div>
 							<div class="center platform-logo-div">
-								<a href="https://github.com/FallenSage0614" target="_blank">
+								<a href="https://github.com/chitrank0614" target="_blank">
 									<img class="mx-auto platform-logo" src="images/github.png" />
 								</a>
 							</div>
@@ -670,7 +670,7 @@
 												statistics is the key to evalution…
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/MLE-Dialect-Analysis
+												https://github.com/chitrank0614/MLE-Dialect-Analysis
 											</div>
 											<div id="website-link-data">
 												https://fallensage0614.github.io/MLE-Dialect-Analysis/
@@ -697,7 +697,7 @@
 												including water pumps, threshers, lights etc.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/Smart-Irrigation-Project
+												https://github.com/chitrank0614/Smart-Irrigation-Project
 											</div>
 											<div id="website-link-data">
 												https://fallensage0614.github.io/Smart-Irrigation-Project/
@@ -719,7 +719,7 @@
 												refraction and reflection.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/Smart-Lens
+												https://github.com/chitrank0614/Smart-Lens
 											</div>
 											<div id="website-link-data">#projects-section</div>
 										</div>
@@ -742,7 +742,7 @@
 												bootstrap and axios framework.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/resourcemanager
+												https://github.com/chitrank0614/resourcemanager
 											</div>
 											<div id="website-link-data">
 												https://prasannaelectrotech.github.io/resourcemanager/
@@ -762,7 +762,7 @@
 												Option to control the speed will be added soon.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/BubbleSort-Visualizer
+												https://github.com/chitrank0614/BubbleSort-Visualizer
 											</div>
 											<div id="website-link-data">
 												https://fallensage0614.github.io/BubbleSort-Visualizer/
@@ -784,7 +784,7 @@
 												commands. Opening basic applications like Code IDE etc.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/David-Voice-Assistant
+												https://github.com/chitrank0614/David-Voice-Assistant
 											</div>
 											<div id="website-link-data">#projects-section</div>
 										</div>
@@ -805,7 +805,7 @@
 												useful for making documentation of lengthy codes.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/Compiler-Design-Project-C-AutoIndentor-and-Summariser
+												https://github.com/chitrank0614/Compiler-Design-Project-C-AutoIndentor-and-Summariser
 											</div>
 											<div id="website-link-data">#projects-section</div>
 										</div>
@@ -828,7 +828,7 @@
 												damage-proof.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/Text-In-Image-Encryption-Image-Transfer-over-Server-Client-
+												https://github.com/chitrank0614/Text-In-Image-Encryption-Image-Transfer-over-Server-Client-
 											</div>
 											<div id="website-link-data">#projects-section</div>
 										</div>
@@ -848,7 +848,7 @@
 												path algorithm.
 											</div>
 											<div id="repo-link-data">
-												https://github.com/FallenSage0614/DelhiMetroRouteApp
+												https://github.com/chitrank0614/DelhiMetroRouteApp
 											</div>
 											<div id="website-link-data">#projects-section</div>
 										</div>
