--- a/index.html
+++ b/index.html
@@ -1526,24 +1526,18 @@
 											</a>
 										</div>
 										<div class="row">
-											<a
-												href="mailto:chitrankmishra010@gmail.com"
-												class="font2"
-											>
+											<a href="mailto:chitrankmishra@gmail.com" class="font2">
 												<div class="col-sm-12">
 													<i class="fas fa-envelope"></i>
-													&nbsp&nbsp chitrankmishra010@gmail.com
+													&nbsp&nbsp chitrankmishra@gmail.com
 												</div>
 											</a>
 										</div>
 										<div class="row">
-											<a
-												href="mailto:chitrankmishra020@gmail.com"
-												class="font2"
-											>
+											<a href="mailto:17103103@mail.jiit.ac.in" class="font2">
 												<div class="col-sm-12">
 													<i class="fas fa-envelope"></i>
-													&nbsp&nbsp chitrankmishra020@gmail.com
+													&nbsp&nbsp 17103103@mail.jiit.ac.in
 												</div>
 											</a>
 										</div>
