--- a/index.html
+++ b/index.html
@@ -210,6 +210,17 @@
 							</div>
 							<div class="center platform-logo-div">
 								<a
+									href="https://leetcode.com/chitrank_0614/"
+									target="_blank"
+								>
+									<img
+										class="mx-auto platform-logo"
+										src="images/leetcode.png"
+									/>
+								</a>
+							</div>
+							<div class="center platform-logo-div">
+								<a
 									href="https://auth.geeksforgeeks.org/user/chitrank_0614/profile"
 									target="_blank"
 								>
