Stars Color Updated

--- a/index.html
+++ b/index.html
@@ -209,10 +209,7 @@
 								</a>
 							</div>
 							<div class="center platform-logo-div">
-								<a
-									href="https://leetcode.com/chitrank_0614/"
-									target="_blank"
-								>
+								<a href="https://leetcode.com/chitrank_0614/" target="_blank">
 									<img
 										class="mx-auto platform-logo"
 										src="images/leetcode.png"
@@ -913,7 +910,7 @@
 									<span class="font2 Montserrat">Tech Stack</span>
 								</div>
 								<div class="tech-div">
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/c.png" />
 										</div>
@@ -936,7 +933,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/cpp.png" />
 										</div>
@@ -960,7 +957,7 @@
 										</div>
 									</div>
 
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/python.png" />
 										</div>
@@ -983,7 +980,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img
 												class="mx-auto tech-logo"
@@ -1009,7 +1006,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/html.png" />
 										</div>
@@ -1032,7 +1029,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/css.webp" />
 										</div>
@@ -1055,7 +1052,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img
 												class="mx-auto tech-logo"
@@ -1081,7 +1078,7 @@
 											<i class="fas fa-star-half-alt"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/mysql.png" />
 										</div>
@@ -1104,7 +1101,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/php.svg" />
 										</div>
@@ -1127,7 +1124,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/mongodb.png" />
 										</div>
@@ -1150,7 +1147,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/heroku.png" />
 										</div>
@@ -1173,7 +1170,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div>
-									<!-- <div class="row highlight2 center tech-sub-div">
+									<!-- <div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/git.png" />
 										</div>
@@ -1196,7 +1193,7 @@
 											<i class="far fa-star"></i>
 										</div>
 									</div> -->
-									<div class="row highlight2 center tech-sub-div">
+									<div class="row highlight4 center tech-sub-div">
 										<div class="center col-sm-1 tech-logo-div">
 											<img class="mx-auto tech-logo" src="images/arduino.png" />
 										</div>
